Add assign queue buff command
