# openapi.yaml
@@ -660,6 +660,34 @@ paths:
           description: Invalid data provided
       tags:
         - Buffs
+    delete:
+      operationId: BuffsController_removeFirst
+      parameters:
+        - name: guildUid
+          required: true
+          in: path
+          schema:
+            type: string
+        - name: type
+          required: true
+          in: path
+          schema:
+            enum:
+              - construction
+              - research
+              - training
+            type: string
+      responses:
+        '200':
+          description: The removed buff.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Buff'
+        '422':
+          description: Invalid data provided
+      tags:
+        - Buffs
 info:
   title: MOEPP CITES API
   description: MOEPP CITES API docs
