# src/api_gen/apis/BuffsApi.ts
@@ -96,6 +96,44 @@ export class BuffsApiRequestFactory extends BaseAPIRequestFactory {
         return requestContext;
     }
 
+    /**
+     * @param guildUid 
+     * @param type 
+     */
+    public async buffsControllerRemoveFirst(guildUid: string, type: 'construction' | 'research' | 'training', _options?: Configuration): Promise<RequestContext> {
+        let _config = _options || this.configuration;
+
+        // verify required parameter 'guildUid' is not null or undefined
+        if (guildUid === null || guildUid === undefined) {
+            throw new RequiredError("BuffsApi", "buffsControllerRemoveFirst", "guildUid");
+        }
+
+
+        // verify required parameter 'type' is not null or undefined
+        if (type === null || type === undefined) {
+            throw new RequiredError("BuffsApi", "buffsControllerRemoveFirst", "type");
+        }
+
+
+        // Path Params
+        const localVarPath = '/api/v1/buffs/{guildUid}/{type}'
+            .replace('{' + 'guildUid' + '}', encodeURIComponent(String(guildUid)))
+            .replace('{' + 'type' + '}', encodeURIComponent(String(type)));
+
+        // Make Request Context
+        const requestContext = _config.baseServer.makeRequestContext(localVarPath, HttpMethod.DELETE);
+        requestContext.setHeaderParam("Accept", "application/json, */*;q=0.8")
+
+
+        
+        const defaultAuth: SecurityAuthentication | undefined = _options?.authMethods?.default || this.configuration?.authMethods?.default
+        if (defaultAuth?.applySecurityAuthentication) {
+            await defaultAuth?.applySecurityAuthentication(requestContext);
+        }
+
+        return requestContext;
+    }
+
 }
 
 export class BuffsApiResponseProcessor {
@@ -155,6 +193,38 @@ export class BuffsApiResponseProcessor {
                 ObjectSerializer.parse(await response.body.text(), contentType),
                 "Array<Buff>", ""
             ) as Array<Buff>;
+            return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
+        }
+
+        throw new ApiException<string | Buffer | undefined>(response.httpStatusCode, "Unknown API Status Code!", await response.getBodyAsAny(), response.headers);
+    }
+
+    /**
+     * Unwraps the actual response sent by the server from the response context and deserializes the response content
+     * to the expected objects
+     *
+     * @params response Response returned by the server for a request to buffsControllerRemoveFirst
+     * @throws ApiException if the response code was not in [200, 299]
+     */
+     public async buffsControllerRemoveFirstWithHttpInfo(response: ResponseContext): Promise<HttpInfo<Buff >> {
+        const contentType = ObjectSerializer.normalizeMediaType(response.headers["content-type"]);
+        if (isCodeInRange("200", response.httpStatusCode)) {
+            const body: Buff = ObjectSerializer.deserialize(
+                ObjectSerializer.parse(await response.body.text(), contentType),
+                "Buff", ""
+            ) as Buff;
+            return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
+        }
+        if (isCodeInRange("422", response.httpStatusCode)) {
+            throw new ApiException<undefined>(response.httpStatusCode, "Invalid data provided", undefined, response.headers);
+        }
+
+        // Work around for missing responses in specification, e.g. for petstore.yaml
+        if (response.httpStatusCode >= 200 && response.httpStatusCode <= 299) {
+            const body: Buff = ObjectSerializer.deserialize(
+                ObjectSerializer.parse(await response.body.text(), contentType),
+                "Buff", ""
+            ) as Buff;
             return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
         }
 
