# src/api_gen/types/ObservableAPI.ts
@@ -410,6 +410,37 @@ export class ObservableBuffsApi {
         return this.buffsControllerFindAllWithHttpInfo(guildUid, type, _options).pipe(map((apiResponse: HttpInfo<Array<Buff>>) => apiResponse.data));
     }
 
+    /**
+     * @param guildUid
+     * @param type
+     */
+    public buffsControllerRemoveFirstWithHttpInfo(guildUid: string, type: 'construction' | 'research' | 'training', _options?: Configuration): Observable<HttpInfo<Buff>> {
+        const requestContextPromise = this.requestFactory.buffsControllerRemoveFirst(guildUid, type, _options);
+
+        // build promise chain
+        let middlewarePreObservable = from<RequestContext>(requestContextPromise);
+        for (const middleware of this.configuration.middleware) {
+            middlewarePreObservable = middlewarePreObservable.pipe(mergeMap((ctx: RequestContext) => middleware.pre(ctx)));
+        }
+
+        return middlewarePreObservable.pipe(mergeMap((ctx: RequestContext) => this.configuration.httpApi.send(ctx))).
+            pipe(mergeMap((response: ResponseContext) => {
+                let middlewarePostObservable = of(response);
+                for (const middleware of this.configuration.middleware) {
+                    middlewarePostObservable = middlewarePostObservable.pipe(mergeMap((rsp: ResponseContext) => middleware.post(rsp)));
+                }
+                return middlewarePostObservable.pipe(map((rsp: ResponseContext) => this.responseProcessor.buffsControllerRemoveFirstWithHttpInfo(rsp)));
+            }));
+    }
+
+    /**
+     * @param guildUid
+     * @param type
+     */
+    public buffsControllerRemoveFirst(guildUid: string, type: 'construction' | 'research' | 'training', _options?: Configuration): Observable<Buff> {
+        return this.buffsControllerRemoveFirstWithHttpInfo(guildUid, type, _options).pipe(map((apiResponse: HttpInfo<Buff>) => apiResponse.data));
+    }
+
 }
 
 import { ChannelsApiRequestFactory, ChannelsApiResponseProcessor} from "../apis/ChannelsApi";
